* Unreleased - Marek Jędryka <jedryka89@gmail.com> - v2.7
    - disabling SVG tab if no SVG file loaded on file tree view and the view is not empty

* Sun Apr 28 2013 - Marek Jędryka <jedryka89@gmail.com> - v2.6
    - added command line arguments --help, --session and --lang support
    - added background color in convertion options
    - added SVG convertion tab: remove single text node and group of text node containing specifed string
    - added adding frame, text and picture effect and effect tab
    - added sessions storage in XML files
    - create empty metadata when converting from SVG file
    - set current date time in Exif if needed
    - iconsets moved from UI to C++ code for uic<4.8 compatibility
    - Polish translation updated

* Wed Nov 14 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.5.1
    - relative path bug-fix

* Tue Nov 13 2012 - Marek Jędryka <jedryka89@gmail.com> - v2.5
    - project moved to CMake
    - Conditional compilation: disable or enable metadata support
    - Settings and DetailsBrowser classes added
    - Image width and height line edit replaced by spin box
    - faster selection using Exiv2 image size detection if it's available
    - bugfix: delete selected items from list in ConvertDialog - now delete all selected items
    - shared data manipulation methods moved to SharedInformation;
    - save and enabled fields in MetadataUtils::Metadata removed - now used Settings fields
    - DetailsOptions namespace moved to separated file
    - widgets moved to separated directory
    - option and selection dialogs splited to few widgets for more flexibility
    - remove temporary files at end of session
    - width of SVG images render in DetailsBrowser patch
    - drop event improved
    - myQTreeWidget renamed to TreeWidget, some code moved from ConvertDialog
    - external columns into tree view like size (px,K/MiB) added
    - new options group box "File list" and header view context menu for TreeWidget settings