@@ -28,7 +28,7 @@ int main(int argc, char *argv[]) {
     Q_INIT_RESOURCE(application);
     QApplication app(argc, argv);
 
-    QTextCodec::setCodecForCStrings(QTextCodec::codecForName("UTF-8"));
+//    QTextCodec::setCodecForCStrings(QTextCodec::codecForName("UTF-8"));
     QTextCodec* codec = QTextCodec::codecForLocale ();
 
     // Parse the arguments from the command line
